style: fix ways, sliders on several pages and fix gap on players

--- a/pages/index-statistics.css
+++ b/pages/index-statistics.css
@@ -5,6 +5,11 @@
     padding: 20px;
 }
 
+.statistics .custom-select {
+    padding: 0;
+    border: 0;
+}   
+
 .statistics h2 {
     margin: 0 0 53px;
     padding: 10px;
