--- a/pages/index.css
+++ b/pages/index.css
@@ -436,6 +436,7 @@ body {
   justify-content: space-around;
   list-style: none;
   margin-bottom: 24px;
+  gap: 24px;
 }
 
 .news__cards-item {
